# envmaptool

./: CMakeLists.txt  README  TODO
code/: envmaptool.cpp  hdr_file.cpp  hdr_file.h  math.h  opengl.h
shaders/: draw_mesh.frag  draw_mesh.vert  filter.vert  filter_beckmann_cosine.frag  filter_cosine.frag  filter_ggx_cosine.frag  filter_phong_cosine.frag
